# SURGE

./: .gitignore  CHANGELOG.md  DATASHEET.md  LICENSE  README.md  event_config.py  requirements.txt
tools/event_data_pipeline/: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
tools/event_data_pipeline/configs/: data9_event_catalog.json  events.example.json  surge_crawler_15_event_catalog.json
tools/event_data_pipeline/docs/: DATA9_FULL_RUN.md  MILESTONE_0_1.md  PHASE_2_DERIVED_DATA.md  PRODUCTION_WORKFLOW.md  PROJECT_SCOPE.md  RUNNING.md  SENTIMENT_35_EVENT_COMPLETION.md  SENTIMENT_35_EVENT_ESTIMATE.md  SENTIMENT_HANDOFF.md  SURGE_COMPATIBILITY.md  SURGE_CRAWLER_15_HANDOFF.md  UNIFIED_SCHEMA.md
tools/event_data_pipeline/requirements/: README.md  gpu-server.lock.txt  remote.lock.txt
tools/event_data_pipeline/src/event_pipeline/: __init__.py  __main__.py  batch.py  cli.py  models.py  normalization.py  pipeline.py  quality.py  sentiment.py  sentiment_finalize.py  sentiment_manifest.py  (+12 more)
tools/event_data_pipeline/tests/: test_adapters.py  test_batch.py  test_data9_pipeline.py  test_pipeline_rules.py  test_sentiment.py  test_sentiment_finalize.py  test_sentiment_partition.py  test_sentiment_prepare.py  test_sentiment_timeseries.py  test_sentiment_vllm.py  test_surge_graph.py  test_text_view.py  test_timeseries.py  test_window_analysis.py  test_workflow.py
tools/event_data_pipeline/tools/: backup_latest_snapshots.py  convert_remote_data9.py  download_remote_file.py  import_surge_crawler_backup.py  resume_remote_file.py  validate_remote_data9.py
(+1855 files in other folders)
