[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "event-data-pipeline"
version = "0.2.0"
description = "Independent multi-platform event data normalization pipeline"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
remote = ["paramiko==3.5.1"]
gpu = [
  "torch==2.7.0; platform_system == 'Linux'",
  "transformers==4.53.2; platform_system == 'Linux'",
  "vllm==0.9.2; platform_system == 'Linux'",
]
all = [
  "paramiko==3.5.1",
  "torch==2.7.0; platform_system == 'Linux'",
  "transformers==4.53.2; platform_system == 'Linux'",
  "vllm==0.9.2; platform_system == 'Linux'",
]

[project.scripts]
event-pipeline = "event_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
